# memorious-mcp

./: .gitignore  LICENSE  README.md  justfile  main.py  pyproject.toml  server.json
.github/workflows/: ci.yml  publish-mcp.yml
backends/: chroma_backend.py  memory_backend.py
scripts/: validate_server_json.py
src/memorious_mcp/: main.py
tests/: test_chroma_backend.py  test_variations.yaml
