[project]
name = "memorious-mcp"
version = "0.1.0"
description = "Persistent key-value memory MCP server with ChromaDB backend and FastMCP tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.21",
    "mcp[cli]>=1.14.0",
    "fastmcp>=2.0.0",
    "pytest>=8.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
markers = [
  "integration: mark tests as integration tests",
]

[project.authors]
name = ""

license = { text = "MIT" }
